syntax = "proto3";
package payment;

service PaymentService {
    rpc ProcessPayment (PaymentRequest) returns (PaymentResponse) {}
}

message PaymentRequest {
    string userId = 1;
    double amount = 2;
    string currency = 3;
    string cardLast4 = 4;
}

message PaymentResponse {
    bool success = 1;
    string transactionid = 2;
    string errorMessage = 3;
}